# hometoucher_pi

./: .gitignore  Cargo.toml  hometoucher.service  hometoucher_BZ.service  hometoucher_Template.service  hometoucher_pi.service  install_on_pi.sh  install_to_pi
images/: AskForServer.psd  ConnectingToServer.psd  LookingForManager.psd
src/: locator.rs  main.rs  query.rs  resources.rs  screen.rs
src/rfb_session/: decode.rs  mod.rs  rfb_messages.rs  touch.rs
