[package]
name = "hometoucher_pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framebuffer = "0.3.0"
tokio = { version="1", features = ["full"]}
tokio-stream = "0.1"
tokio-fd = "0.3.0"
mdns = { git= "https://github.com/yuvalrakavy/mdns.git", branch="fixed-discover-listen" }
rustop = "1.1.1"
png = "0.16.8"
gethostname = "0.2.1"
ctrlc = { version = "3.0", features = ["termination"] }
