[package]
name = "hometoucher_pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framebuffer = "0.3.1"
tokio = { version="1.40.0", features = ["full"]}
tokio-stream = "0.1.16"
tokio-fd = "0.3.0"
mdns = { git= "https://github.com/yuvalrakavy/mdns.git", branch="fixed-discover-listen" }
rustop = "1.1.4"
png = "0.17.13"
gethostname = "0.5.0"
ctrlc = { version = "3.4.5", features = ["termination"] }
